app/styles/app.scss
@import "bourbon",
        "neat";

$brand: rgba(#97bf9f, 0.95);
$darken: 20%;
$text: white;
$brand-primary: $brand;
$brand-secondary: darken($brand, $darken);
$brand-border: 0 rem(-2) 0 $brand-secondary;
$shadow: rem(3) rem(3) rem(5) rgba(black, 0.15);
$font: 'Lato', sans-serif;
$spacing: 0.35rem;
$right-offset: 0.6rem;
$medium: 'min-width: (#{rem(600)})';
$large: 'min-width: (#{rem(1024)})';

::-webkit-input-placeholder {
  color: $text;
  opacity: 0.5;
}
:-moz-placeholder {
  color: $text;
  opacity: 0.5;
}
::-moz-placeholder {
  color: $text;
  opacity: 0.5;
}
:-ms-input-placeholder {
  color: $text;
  opacity: 0.5;
}

a, input, button {
  outline: none;
}

html,
body {
  background-color: $brand;
  font-family: $font;
  font-size: rem(16);
  overflow-y: hidden;
}
svg {
  pointer-events: none;
  width: 100%;
  height: 100%;
}
[class*="-list"] {
  list-style-type: none;
  margin: 0;
  padding: 0;
}
.toggler,
.hide {
  display: none !important;
}

%shadow {
  background-color: $brand;
  border-radius: rem(4);
  box-shadow: 0 rem(1) rem(5) rgba(black,.65);
}

.btn {
  @extend %shadow;
  display: inline-block;
  background-color: $brand;
  height: rem(35);
  padding: rem(4);
  width: rem(35);
  z-index: 10;

  svg {
    fill: $text;
  }
}

#map {
  bottom: 0;
  height: 100%;
  left: 0;
  position: absolute;
  right: 0;
  top: 0;
  width: 100%;
  z-index: 0;
}

#map .leaflet-bar a {
  background-color: $brand;
  color: $text;
  border-bottom: none;
}

.close {
  display: inline-block;
  fill: $text;
  height: 1.3rem;
  width: 1.3rem;
}

.nav-menu {
  background-color: $brand;
  box-shadow: inset $brand-border;
  left: 0;
  padding: 0 rem(16);
  padding: rem(16);
  position: absolute;
  right: 0;
  text-align: center;
  top: 0;
  display: none;
  z-index: 10;

  &.nav-on {
    display: block;
  }
}
.nav-menu .close {
  position: absolute;
  right: $right-offset;
  top: rem(16);
}
.nav-menu .nav-menu-items {
  margin-top: rem(16);
}
.nav-menu-item {
  color: $text;
  font-size: rem(20);
  padding: rem(14) 0;

  &:not(:last-child) {
    box-shadow: 0 rem(2) 0 $brand-secondary;
  }
}
.nav-icons {
  float: right;
  padding: $spacing ($spacing + 0.25) $spacing $spacing;
  position: relative;
  text-align: right;
  z-index: 0;
}
.nav-icons li {
  display: inline-block;

  &:not(:last-child) {
    margin-right: 0.25rem;
  }
}
.nav-icon {
  position: relative;

  &:not(:last-child) {
    margin-right: 0.35rem;
  }

  svg {
    display: inline-block;
    height: 100%;
    padding: 0.25rem;
    width: 100%;
  }

  a {
    display: inline-block;
    height: 100%;
    width: 100%;
  }
}

.search {
  @extend %shadow;
  position: absolute;
  top: 0;
  display: none;
  width: 100%;
  z-index: 10;

  input {
    border: none;
    color: $text;
    line-height: rem(50);
    position: relative;
    text-indent: 0.6rem;
    width: 100%;
    background-color: transparent;
  }

  .close {
    position: absolute;
    right: $right-offset;
    top: 0.875rem;
  }

  &.search-on {
    display: block;
  }

  @media (#{$large}) {
    position: relative;
    display: block;
    margin: 1rem 0 0 1rem;
    max-width: 25rem;
    box-shadow: $shadow;

    .close {
      display: none;
    }
  }
}

.nav-icon-search {
  @media (#{$large}) {
    display: none;
  }
}

.about,
.properties-list {
  overflow-y: scroll;

  @media (#{$medium}) {
    flex-basis: 50%;
  }
}

.panel {
  -webkit-overflow-scrolling: touch;
  background-color: $brand;
  bottom: 0;
  box-shadow: 0 rem(-2) 0 $brand-secondary;
  color: $text;
  left: 0;
  position: absolute;
  right: 0;
  transform: translate3d(0, 7rem, 0);
  transition: transform 150ms ease;
  z-index: 2;

  .close {
    position: absolute;
    right: $right-offset;
    top: rem(10);
    z-index: 10;
  }

  &.panel-on {
    transform: translate3d(0, 0, 0);
    transition: transform 150ms ease;
    z-index: 11;
  }

  @media (#{$large}) {
    position: relative;
    z-index: 11;
    max-width: 25rem;
    margin: 0 0 0 1rem;
    transform: none;
    transition: none;
    box-shadow: $brand-border, $shadow;
    z-index: 2;

    .close {
      top: rem(-37)
    }
  }
}

.owner {
  box-shadow: 0 rem(2) 0 $brand-secondary;

  address p {
    margin: 0;
  }
}
.property-owner {
  cursor: pointer;
}
.property svg {
  fill: $text;
  width: 1rem;
  height: 1rem;
  display: inline-block;
  margin-right: 0.2rem;
  position: relative;
  top: rem(2);
}
.owner,
.property {
  // display: block;
  padding: 1rem;
  position: relative;
}
.owner p,
.property p {
  margin-top: 0;
  margin-bottom: rem(10);

  &:last-child {
    margin-bottom: 0;
  }
}
.properties-list .property {
  cursor: pointer;
  padding-top: rem(16);

  p {
    margin: 0;

    &:first-child {
      margin-bottom: rem(10);
    }
  }

  &:not(:first-child):after {
    background-image: linear-gradient(90deg, #5b9567 0%, #5b9567 100%);
    background-position: center top;
    background-repeat: no-repeat;
    background-size: 90% rem(2);
    content: "";
    display: block;
    height: rem(2);
    left: 0;
    position: absolute;
    top: rem(-2);
    width: 100%;
  }

  &:hover {
    background-color: $brand-secondary;

    &:after {
      content: none;
    }
  }
}
address {
  font-style: normal;
}

.panel-on:not(.active-property) .properties-list {
  display: block;
  max-height: rem(150);
  overflow-y: scroll;

  @media (#{$large}) {
    max-height: rem(350);
  }
}
.active-property .property {
  display: block;
}

.about {
  display: none;
  padding-left: rem(16);

  @media (#{$medium}) {
    display: block;
  }
}

.streetview {
  height: 0;
  left: 0;
  opacity: 0;
  overflow: hidden;
  position: absolute;
  top: 0;
  transform: translate3d(0, 100%, 0);
  width:100%;
  z-index: 1;

  &.is-loaded {
    height: 100%;
    opacity: 1;
    transform: translate3d(0, 0, 0);
    transition-duration: 150ms;
    transition-property: transform, opacity;
    transition-timing-function: ease;
  }

  img {
    height: 100%;
    right: 0;
    position: absolute;
    top: 0;
    width: auto;
  }

  @media (#{$large}) {
    position: relative;
    margin: 0 0 0 1rem;
    max-width: 25rem;
    z-index: 12;
    padding: 1rem;
    box-shadow: $brand-border, $shadow;
    background-color: #97bf9f;
    transform: none;
    transition: none;

    img {
      position: relative;
      width: 100%;
      display: block;
      height: auto;
    }
  }
}

.legend {
  @extend %shadow;
  bottom: 0;
  display: none;
  background-color: $brand;
  color: $text;
  left: 0;
  margin: 0 0 ($spacing + 0.25) ($spacing + 0.25);
  max-width: 15rem;
  padding: ($spacing + 0.25) $spacing $spacing;
  position: absolute;
  z-index: 11;

  @media (#{$large}) {
    max-width: rem(300);
    padding-right: rem(40);
  }

  ul {
    margin-top: rem(10);
  }

  li {
    line-height: 1.4rem;
  }

  .close {
    position: absolute;
    right: $spacing + 0.25;
    top: $spacing + 0.25;
    fill: $text;
  }
}
.legend-marker-color {
  width: auto;
  height: auto;
}
.legend-label {
  cursor: pointer;
}

.legend-toggle {
  position: absolute;
  bottom: 0;
  left: 0;
  margin: 0 0 ($spacing + 0.25) ($spacing + 0.25);
}

.legend-icon {
  display: inline-block;
  width: rem(16);
  fill: $text;
}

.legend-is-toggled {
  @extend %shadow;
  display: inline-block !important;
}

.loading-overlay {
  position: absolute;
  width: 100%;
  height: 100%;
  top: 0;
  left: 0;
  padding-top: 50vh;
  background-color: rgba(#fff, 0.35);
  z-index: 30;
  text-align: center;
  opacity: 0;
  pointer-events: none;
  transition: opacity ease 0.35s;

  &.is-loading {
    pointer-events: auto;
    opacity: 1;
    transition: opacity ease 0.35s;
  }
}

.dot-list {
  display: table;
  margin: auto;
}

.dot {
  display: inline-block;
  border-radius: 50%;
  width: rem(25);
  height: rem(25);
  background-color: #3f3f3f;
  margin: 0 rem(3);
  animation-name: loading;
  animation-duration: 1.4s;
  animation-iteration-count: infinite;

  &:nth-child(2) {
    animation-delay: .2s;
  }

  &:nth-child(3) {
    animation-delay: .4s;
  }
}

@keyframes loading {
  0% {
    opacity: 0.2;
    transform: translateY(0);
  }

  20% {
    opacity: 1;
    transform: translateY(rem(-10));
  }

  100% {
    opacity: 0.2;
    transform: translateY(0);
  }
}

